--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -255,8 +255,7 @@ only screen and (max-width: 380px) {
 }
 
 .withdraw-modal-dialog {
-    padding-top: 9.3%;
-    height: 100%;
+    padding: 100px 0;
     width: 40%;
 }
 
