[Layout]: 1. Profile Image Upload modal added in layout 2. Image radius added in inbox

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -173,6 +173,8 @@
         </li>
       </ul>
     </section>
+
+    <%= render partial: 'shared/profile_image_upload', locals: { user: current_user } %>
   </aside>
 
   <div class="content-wrapper">
