--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -177,6 +177,6 @@
       <% end %>
   <% end %>
 
-  <%= render partial: 'shared/profile_image_upload' %>
+  <%#= render partial: 'shared/profile_image_upload', locals: { user: current_user } %>
 </div>
 
