--- a/app/views/shared/_profile_image_upload.html.erb
+++ b/app/views/shared/_profile_image_upload.html.erb
@@ -7,13 +7,13 @@
       </div>
       <div class="modal-body">
         <%= csrf_meta_tag %>
-        <%= form_for(@user, url: edit_profile_picture_profile_index_path,remote: true, multipart: true, method: :post) do |f| %>
-            <% if @user.errors.any? %>
+        <%= form_for(user, url: edit_profile_picture_profile_index_path,remote: true, multipart: true, method: :post) do |f| %>
+            <% if user.errors.any? %>
                 <div id="error_explanation">
-                  <h2><%= pluralize(@user.errors.count, "error") %> prohibited this upload from being saved:</h2>
+                  <h2><%= pluralize(user.errors.count, "error") %> prohibited this upload from being saved:</h2>
 
                   <ul>
-                    <%@user.errors.full_messages.each do |msg| %>
+                    <% user.errors.full_messages.each do |msg| %>
                         <li><%= msg %></li>
                     <% end %>
                   </ul>
