[Layout]: 1. Influencers_home css added to Sign up modal 2. Brands can only sign up from Email and Influencers can only sign up from Facebook

--- a/app/views/shared/_login_social_network_modal.html.erb
+++ b/app/views/shared/_login_social_network_modal.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag 'influencers_home', media: 'all' %>
+
 <div class="modal fade" id="loginModal" role="dialog">
   <div class="modal-dialog login-modal-dialog">
 
@@ -13,12 +15,9 @@
 
         <div class="social-accounts-logo">
           <% if params[:action] == 'brand_home' %>
-              <a href="<%= user_omniauth_authorize_path('facebook', brands: true) %>">Facebook &nbsp; &nbsp; <%= image_tag('facebook-icon.png', :alt => "fb") %></a>
-              <a href="<%= new_user_session_path %>">Twitter &nbsp; &nbsp; <%= image_tag('twitter-icon.png', :alt => "twitter") %></a>
               <a href="<%= new_user_registration_path(user_type: 'brand')%>">Email &nbsp; &nbsp; <%= image_tag('email-icon.jpg', :alt => "email") %></a>
           <% else %>
               <a href="<%= user_omniauth_authorize_path('facebook') %>">Facebook &nbsp; &nbsp; <%= image_tag('facebook-icon.png', :alt => "fb") %></a>
-              <a href="<%= new_user_session_path %>">Twitter &nbsp; &nbsp; <%= image_tag('twitter-icon.png', :alt => "twitter") %></a>
           <%  end %>
 
         </div>
