remove dollar ($) signs from currency

--- a/app/views/influencer_payments/index.html.erb
+++ b/app/views/influencer_payments/index.html.erb
@@ -5,7 +5,7 @@
 <div class="bank-accounts">
 
   <div class="influencer-payment-div">
-    <p class="payment-balance">Available<span class="space"></span>Balance:<span class="balance">$<%= current_user.balance %></span><span class="space"></span>INR
+    <p class="payment-balance">Available<span class="space"></span>Balance:<span class="balance"><%= current_user.balance %></span><span class="space"></span>INR
     </p>
 
     <div class="amount-withdraw">
