--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -114,21 +114,21 @@
                       <div id="fb_<%= g.object.account_id %>" class="tab-pane">
                         <div class="form-group">
                           <div class="col-md-5 col-sm-8 col-xs-11">
-                            <%= g.label :status_update_cost, "Status Update" %>$
+                            <%= g.label :status_update_cost, "Status Update" %>
                             <%= g.number_field :status_update_cost, required: true %> INR
                           </div>
                           <div class="col-md-6 col-sm-8 col-xs-11">
-                            <%= g.label :cover_photo_cost, "Cover Photo" %>$
+                            <%= g.label :cover_photo_cost, "Cover Photo" %>
                             <%= g.number_field :cover_photo_cost, required: true %> INR
                           </div>
                         </div>
                         <div class="form-group">
                           <div class="col-md-5 col-sm-8 col-xs-11">
-                            <%= g.label :profile_photo_cost, "Profile Photo" %>$
+                            <%= g.label :profile_photo_cost, "Profile Photo" %>
                             <%= g.number_field :profile_photo_cost, required: true %> INR
                           </div>
                           <div class="col-md-6 col-sm-8 col-xs-11">
-                            <%= g.label :video_post_cost, "Video Post" %>$
+                            <%= g.label :video_post_cost, "Video Post" %>
                             <%= g.number_field :video_post_cost, required: true %> INR
                           </div>
                         </div>
