replace followers label with likes
facebook doesn't give us data on followers and we have to use the likes
information instead

--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -16,7 +16,7 @@
             </div>
 
             <div class="col-md-12">
-              <label for="category"> Followers </label>
+              <label for="category"> Likes </label>
 
               <div id="followers-range" class="noUi-target noUi-ltr noUi-horizontal noUi-background"></div>
               <span id="followers-range-value-lower">50.00</span>
