--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -23,7 +23,7 @@
         <div class="info-box-content">
           <p class="info-box-data total-follower-data-color"><%= @account.number_of_followers %></p>
 
-          <p class="info-box-text ">TOTAL FOLLOWERS</p>
+          <p class="info-box-text ">TOTAL LIKES</p>
         </div>
       </div>
       <div class="info-box-custom col-md-3 col-sm-6 col-xs-6">
