--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -29,7 +29,7 @@
             <div class="follower-box pull-right">
               <span class="follower-number"><%= influencer.facebook_accounts.pluck(:number_of_followers).max %></span>
 
-              <p> Followers</p>
+              <p> Likes</p>
             </div>
           </div>
         </div>
