--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
         <hr>
         <% if current_user.influencer? %>
             <p class="text-center font-hind">
-              <%= number_with_delimiter(current_user.facebook_accounts.sum(:number_of_followers)) %> likes
+              <%= number_with_delimiter(current_user.facebook_accounts.pluck(:number_of_followers).max) %> likes
             </p>
         <% end %>
       </div>
