- complete add proper messages for profile incomplete errors to profile page

--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,5 +1,11 @@
 <% flash.each do |type, message| %>
     <div class="alert <%= bootstrap_class_for(type) %> fade in">
-      <%= message %>
+      <% if message.kind_of?(Array)%>
+            <% message.each do |message_text| %>
+              <P><%= message_text %></P>
+            <% end %>
+      <% else %>
+          <%= message %>
+       <% end %>
     </div>
 <% end %>
