--- a/app/views/offers/_brand_offer_veiw.erb
+++ b/app/views/offers/_brand_offer_veiw.erb
@@ -14,8 +14,8 @@
     <% end %>
   </div>
   <div >
-    <%= image_tag offer.sender.profile_picture, class: 'inbox-logo-responsive' %>
-    <span class="title"><%= offer.sender.full_name %> </span>
+    <%= image_tag offer.receiver.profile_picture, class: 'inbox-logo-responsive' %>
+    <span class="title"><%= offer.receiver.full_name %> </span>
   </div>
 
   <div class="offer-text">
