--- a/app/views/offers/_offer_body_view.erb
+++ b/app/views/offers/_offer_body_view.erb
@@ -11,7 +11,7 @@
   <div class="message-container-<%= offer.id %>">
     <% offer.messages.each do |message| %>
         <div id="message-<%= message.id %>" class="message message-<%= message.id %>">
-          <%= image_tag offer.sender.profile_picture, class: 'inbox-logo-responsive' %>
+          <%= image_tag offer.receiver.profile_picture, class: 'inbox-logo-responsive' %>
           <span class="title"><%= simple_format(message.body) %> </span>
         </div>
     <% end %>
