[View]:  USD changed into INR in brand payment

--- a/app/views/brand_payments/index.html.erb
+++ b/app/views/brand_payments/index.html.erb
@@ -26,7 +26,7 @@
             <th class="squaredFour" id="select_all_brand_payment"><input type="checkbox" class="payment-header" value="all"/></th>
             <th>Date Billed</th>
             <th>Transaction ID</th>
-            <th>Amount Billed (USD)</th>
+            <th>Amount Billed (INR)</th>
             <th>Payment Status</th>
           </tr>
           </thead>
