--- a/app/views/influencer_payments/index.html.erb
+++ b/app/views/influencer_payments/index.html.erb
@@ -2,6 +2,8 @@
 
 <% title 'Influencer Payment' %>
 
+<div class="payment-main-content">
+
 <div class="bank-accounts">
 
   <div class="influencer-payment-div">
@@ -98,6 +100,8 @@
 </div>
 
 <div id="show_bank_account_modal">
+</div>
+
 </div>
 
 </div>
