--- a/app/views/shared/_profile_image_upload.html.erb
+++ b/app/views/shared/_profile_image_upload.html.erb
@@ -1,7 +1,9 @@
+<%= stylesheet_link_tag 'profile', media: 'all' %>
+
 <div id="profile_image_upload_modal" class="modal fade">
   <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
+    <div class="modal-content profile-image-modal-content">
+      <div class="modal-header profile-image-modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       </div>
       <div class="modal-body">
