--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -176,7 +176,6 @@ only screen and (max-width: 540px) {
 }
 
 .offer-box{
-    margin: 5px 0;
     font-family: "Raleway",sans-serif;
     font-size: 13px;
 }
@@ -197,25 +196,38 @@ only screen and (max-width: 540px) {
 }
 .offer-header div{
     display: inline-block;
-    padding: 10px 0 6px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    vertical-align: middle;
 }
 
-.read-status, .select-offer, .make-star{
-    margin-right: 20px;
+.read-status{
+    padding-left: 10px;
+    padding-right: 5px;
 }
 
+.select-offer{
+    padding-left: 5px;
+    padding-right: 10px;
+}
+
+.make-star{
+    padding-left: 10px;
+    padding-right: 5px;
+}
+.offer-message-sender{
+    padding-left: 5px;
+}
 .title{
     margin-left: 10px;
 }
 .offer-text{
-    min-width: 40%;
-    margin-left: 10px;
-    text-align: center;
+    margin-left: 30px;
+    width: 40%;
 }
 .offer-time{
     float: right;
     margin-right: 20px;
-    margin-top: 10px;
     font-family: 'Hind', sans-serif;
     font-weight: 500;
     font-size: 10.4pt;
@@ -246,8 +258,7 @@ only screen and (max-width: 540px) {
 }
 /* checkbox design */
 input[type=checkbox].select-offer{
-    width: 20px;
-    height: 20px;
+    width: 15px;
 }
 
 .offer-content{
