--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -25,8 +25,9 @@
 
 .inbox-logo-responsive {
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
+    border: 1px solid #d7d7d7;
     border-radius: 50%;
 }
 
