- change payment page css

--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -107,15 +107,15 @@
     padding: 5px 5px 0px 5px;
 }
 .panel-payment {
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;*/
     background-color: #fff;
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    border-radius: 0;
+    /*border-left: 1px solid #ddd;*/
+    /*border-right: 1px solid #ddd;*/
+    /*border-bottom: 1px solid #ddd;*/
+    /*border-radius: 0;*/
     /*-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);*/
     /*box-shadow: 0 1px 1px rgba(0,0,0,.05);*/
-    padding: 24px 20px 0px 20px;
+    padding: 24px 20px 1px 20px;
 }
 
 .status-circle {
