[Layout]: Profile Image upload css file included

--- a/app/views/shared/_profile_image_upload.html.erb
+++ b/app/views/shared/_profile_image_upload.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'profile', media: 'all' %>
+<%= stylesheet_link_tag 'profile-image-upload', media: 'all' %>
 
 <div id="profile_image_upload_modal" class="modal fade">
   <div class="modal-dialog">
