--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -64,7 +64,7 @@
               <div class="form-group">
                 <%= f.label :cost, "Cost", class: 'control-label col-md-4' %>
                 <div class="col-md-8">
-                  <%= f.text_field :cost, { class: 'form-control campaign-cost-input', value: @campaign.cost.present? ? @campaign.cost : '', readonly: true, id: 'post_cost' } %>
+                  <%= f.text_field :cost, { class: 'form-control campaign-cost-input', value: @campaign.cost.present? ? @campaign.cost : @costs[0][0], readonly: true, id: 'post_cost' } %>
                 </div>
               </div>
 
@@ -99,7 +99,7 @@
               <div class="form-group">
                 <%= f.label :name, "Enter Campaign Name", class: 'control-label col-md-4' %>
                 <div class="col-md-8">
-                  <%= f.text_field :name %>
+                  <%= f.text_field :name, required: true %>
                 </div>
               </div>
 
@@ -119,14 +119,14 @@
           <%= f.label :text, "Text" %>
         </div>
         <div class="row">
-          <%= f.text_area :text, rows: 4 %>
+          <%= f.text_area :text, rows: 4, required: true %>
         </div>
 
         <div class="row">
           <%= f.label :headline, "Headline" %>
         </div>
         <div class="row">
-          <%= f.text_field :headline %>
+          <%= f.text_field :headline, required: true %>
         </div>
 
       </div>
