[Payment]: Brand Payment page Css issue Fixed

--- a/app/views/brand_payments/index.html.erb
+++ b/app/views/brand_payments/index.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div class="payment-content">
+<div class="brand-payment-content">
   <ul class="nav nav-tabs" id="transaction-tabs">
     <li class= "active">
       <a href="#payment">
