--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -257,7 +257,7 @@ only screen and (max-width: 380px) {
 }
 
 .brand-payment-content {
-    padding: 20px;
+    padding: 0 20px;
 }
 
 .withdraw-modal-dialog {
